2002-05-28  Roland McGrath  <roland@frob.com>

	* cthreads.h: Do not define WAIT_DEBUG to affect inlines.
	* options.h: Not here either.

	* cprocs.c (cproc_block): Can't be static, called from cancel-cond.c.

	* cthreads.h (hurd_condition_wait, condition_implies,
	condition_unimplies): Restore decls lost in merge.
	(mutex_clear): Define as mutex_init instead of bogon (lost in merge).

	* cthreads.c (cthread_fork_prepare, cthread_fork_parent,
	cthread_fork_child): Don't call malloc_fork_* (lost in merge).

	* lockfile.c: Use __attribute__ magic instead of #pragma magic
	for alias definitions.  Don't bother to make them weak.

2002-05-26  Roland McGrath  <roland@frob.com>

	Changes merged from CMU MK83a version:
	* cthreads.h, options.h: Various cleanups.
	* call.c, cthread_data.c, sync.c, mig_support.c, stack.c: Likewise.
	* i386/cthreads.h, i386/thread.c, i386/lock.s: Likewise.
	* cthread_internals.h: Add decls for internal functions.
	(struct cproc): Use vm_offset_t for stack_base and stack_size members.
	Use natural_t for context member.
	* cprocs.c: Use prototypes for all defns.
	* cthreads.c: Likewise.
	(cthread_exit): Cast any_t to integer_t before int.

	* alpha/thread.c: #if 0 out the silly bzero decl.

	* alpha/cthreads.h, alpha/thread.c, alpha/csw.S, alpha/lock.S:
	New files, verbatim from CMU release MK83a user/threads/alpha.

2002-05-08  Roland McGrath  <roland@frob.com>

	* cthreads.c (cthread_exit): Cast any_t to long before int.

	* cthread_internals.h: int -> void * for `busy' member.
	* cprocs.c (cthread_mach_msg): Don't cast to int when setting it.
	* cprocs.c (cthread_mag_active): Likewise.

2002-05-07  Roland McGrath  <roland@frob.com>

	* cprocs.c (cproc_list_lock): Declare type as spin_lock_t.

	* cthreads.h (cthread_sp): Cast to vm_address_t instead of int.
	(mutex_unlock): Cast to void * instead of int.

2002-03-24  Roland McGrath  <roland@frob.com>

	* libthreads.map: Use GLIBC_2.2.6 set instead of GLIBC_2.2.
